# AI-100x-SE-Join-Quest-Task3

./: .gitignore  BDD.prompt  chinese_chess.feature  pyproject.toml  pytest.ini
.gemini/: GEMINI.md
docs/architecture/: ARCHITECTURE_GUIDELINES.md  Chess_piece.md  INDEX.md  chess_board.md
reports/: test_report.txt
script/: append_log.py
src/ai_100x_se_join_quest_task3/: chess_board.py  chess_piece.py
tests/: test_chinese_chess.py
workflows/: dev_log.md  dev_plan.md
