[project]
name = "ai-100x-se-join-quest-task3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FishAlchemist", email = "48265002+FishAlchemist@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "allure-pytest-bdd",
    "pytest-bdd",
    "ruff>=0.12.2",
]

